--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "design-system",
+  "name": "ljoliat-design-system",
   "sideEffects": false,
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "module": "dist/index.js",
   "scripts": {
