--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "sideEffects": false,
   "version": "1.0.4",
   "description": "",
-  "module": "dist/index.js",
+  "module": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel packages --out-dir dist",
@@ -39,6 +39,7 @@
     "@storybook/testing-library": "^0.0.9",
     "babel-loader": "^8.2.3",
     "babel-preset-minify": "^0.5.1",
+    "esbuild": "^0.14.23",
     "eslint": "^8.9.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
