--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "sideEffects": false,
   "version": "1.0.4",
   "description": "",
-  "module": "lib/index.js",
+  "module": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel packages --out-dir dist",
